# WeatherBotCpp

./: .gitignore  CMakeLists.txt  Doxyfile
WeatherBot/: main.cpp
WeatherBot/headers/: Answers.hpp  Connector.hpp  Listeners.hpp  Weather.hpp
WeatherBot/src/: Answers.cpp  Connector.cpp  Listeners.cpp  Weather.cpp
res/: .env
